# software-architecture-course

./: README.md
.github/workflows/: rust.yml
practice-1-shell/: .gitignore  Cargo.toml  README.md  flake.nix
practice-1-shell/src/: cu_kind.rs  env.rs  main.rs  scheduler.rs  state.rs
practice-1-shell/src/builtins/: cat.rs  grep.rs  ls.rs  pwd.rs  wc.rs
practice-1-shell/src/command/: cd.rs  env.rs  executable.rs  mod.rs  scheduler.rs  tests.rs
practice-1-shell/src/syntax/: lexer.rs  mod.rs  parser.rs  tests.rs  token.rs
practice-2-roguelike/: .gitignore  LICENCE.md  README.md  build.gradle.kts  flake.nix  gradle.properties  settings.gradle.kts
practice-2-roguelike/scripts/: shell_hook.sh
practice-2-roguelike/src/main/resources/: logback.xml
practice-2-roguelike/src/test/resources/: map.json
practice-2-roguelike/uml/: chase_player_behavior.uml  class_diagram.uml  component_diagram.uml  flee_behavior.uml  sequence_diagram.uml  ui_state_diagram.uml  withdrawer_strategy.uml
practice-3-bookstore/: README.md  flake.nix
practice-3-bookstore/back/: .gitignore  build.gradle.kts  settings.gradle.kts
practice-3-bookstore/back/ru.mkn.bookstore/: build.gradle.kts  settings.gradle.kts
practice-3-bookstore/front/: package-lock.json  package.json
practice-3-bookstore/front/src/: contsants.ts  index.tsx
practice-3-bookstore/front/src/components/: App.tsx  BookDetails.tsx  BookItem.tsx  BookList.tsx  List.tsx  Model.ts  ReviewItem.tsx  (+1 more)
practice-3-bookstore/uml/: Makefile  class_diagram.uml  component_diagram.uml  order_states.uml  partner_integration.uml
(+81 files in other folders)
