[package]
name = "rush"
version = "0.1.0"
edition = "2021"
default-run = "rush"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
regex = "1.11.0"

[[bin]]
name = "rush"
path = "src/main.rs"

[[bin]]
name = "echo"
path = "src/builtins/echo.rs"

[[bin]]
name = "cat"
path = "src/builtins/cat.rs"

[[bin]]
name = "wc"
path = "src/builtins/wc.rs"

[[bin]]
name = "pwd"
path = "src/builtins/pwd.rs"

[[bin]]
name = "grep"
path = "src/builtins/grep.rs"
